# DigitRecoginition

./: .gitignore  CMakeLists.txt  main.cpp
DEPENDENCIES/MyLib/: CMakeLists.txt  CSVLoader.cpp  CSVLoader.h  NumCPP.cpp  NumCPP.h  NumCpp.inl
